fix: fixed layout issues with the new app-platform implementation

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@
     align-items: center;
     font-size: 1rem;
     overflow: auto;
-    height: calc(100vh - 48px);
-    min-width: 1240px;
+    height: 100%;
+    width: 100%;
 }
 
 .container {
@@ -337,7 +337,7 @@ div.jsx-1730587817 {
 }
 
 .info-box-list > li {
-   
+
 }
 
 .info-box-list > p {
